--- a/members.html
+++ b/members.html
@@ -25,7 +25,7 @@
 
 <!--顶栏-->
 <div id="big_title_div" onclick="goTop()">SMT组员</div>
-<div id="last_update">——更新日期 2015年10月18日——</div>
+<div id="last_update">——更新日期 2016年1月22日——</div>
 <div id="top_box"></div>
 <div id="top_box_top"></div>
 <div id="top_box_strutting"></div>
@@ -40,7 +40,7 @@
 
 <!--内容栏-->
 <div id="content_box">
-	<div class="chapter"">
+	<div class="chapter">
 	<h1>委员会委员</h1>
 		<div class="content">
 			<table>
@@ -89,7 +89,7 @@
 			</table>
 		</div>
 	</div>
-	<div class="chapter"">
+	<div class="chapter">
 	<h1>活跃组员</h1>
 		<div class="content">
 			<table>
@@ -167,6 +167,13 @@
 					<td>d13732918119</td>
 					<td>组员</td>
 					<td>2015/4/19</td>
+					<td>活跃</td>
+					<td>暂无</td>
+				</tr>
+				<tr>
+					<td>a987265104</td>
+					<td>组员</td>
+					<td>2003/6/2</td>
 					<td>活跃</td>
 					<td>暂无</td>
 				</tr>
@@ -487,7 +494,7 @@
 				</tr>
 			</table>
 		</div>
-	</div>	
+	</div>
 	<br />
 </div>
 <script>document.write("<script src='js/delayload.js?" + ver + "'><" + "/script>");</script>
