--- a/nav_update.html
+++ b/nav_update.html
@@ -35,7 +35,7 @@
 
 <!--顶栏-->
 <div id="big_title_div" onclick="goTop()">导航版本更新&amp;离线</div>
-<div id="last_update">——更新日期 2015年9月18日——</div>
+<div id="last_update">——更新日期 2016年1月22日——</div>
 <div id="top_box"></div>
 <div id="top_box_top"></div>
 <div id="top_box_strutting"></div>
@@ -44,7 +44,7 @@
 <div id="content_box">
 	<div class="chapter">
 		<date>说明</date>
-		<div class="content">	
+		<div class="content">
 		<script>if(isOnline == false){document.write("在线版网址：<a href='http://survivalcraft.cn/smt/index.html' target='_blank'>http://smt.survivalcraft.cn</a><br />")}</script>
 			版本号中四组数字从左到右代表的意思分别是：<br />
 			主版本号(程序大改).内容子版本号（内容大改）.框架子版本号（程序小改）.修正版本号（内容小改）
@@ -52,24 +52,34 @@
 	</div>
 	<div class="chapter">
 		<date>离线导航下载</date>
-		<div class="content">		
+		<div class="content">
 			点击<a href="http://pan.baidu.com/share/link?shareid=317197273&uk=2788149454" target="_blank">此处</a>下载
 		</div>
 		<script>if(isOnline){if(ua.match(/android/i)){document.write("<div class='content'>安卓设备建议使用UC浏览器、QQ浏览器打开离线导航</div>")}else if(ua.match(/(ipad|iphone|ipod)/i)){document.write("<div class='content'>IOS设备建议使用<a href='resources.html#cont_3'>Filza、ifile</a>打开离线导航</div>")}}</script>
 	</div>
 	<div class="chapter">
+		<date>2.7.7.12</date>
+		<div class="content">
+			更新日期：2016年?月?日<br />
+			1.网页体验优化，完美流畅<br />
+			2.更新Blocksdata教程对应游戏1.29，修改了一些翻译和说明<br />
+			3.资源下载整合增加安卓版pak处理器，感谢百度贴吧-瞄准地雷的开发和提供！<br />
+			4.Content解析针对新出的安卓版pak处理器对第一节做了更新；丰富、精简了第二节对一些文件的说明
+		</div>
+	</div>
+	<div class="chapter">
 		<date>2.6.6.11</date>
-		<div class="content">		
+		<div class="content">
 			更新日期：2015年9月18日<br />
 			1.改善首页提醒网页不能正常显示的机制<br />
-			2.改善Blocksdata解析中启发例子的语言表述，增加一个快速除水例子<br />
+			2.改善Blocksdata教程中启发例子的语言表述，增加一个快速除水例子<br />
 			3.首页增加介绍本导航的用处<br />
 			4.少量修正<br />
 		</div>
 	</div>
 	<div class="chapter">
 		<date>2.6.6.10</date>
-		<div class="content">		
+		<div class="content">
 			更新日期：2015年8月24日<br />
 			1.离线版导航首页如果发现网页不能正常显示，将自动提示请更换浏览器<br />
 			2.Database解析第一节更新，更加标准清楚<br />
@@ -80,7 +90,7 @@
 	</div>
 	<div class="chapter">
 		<date>2.6.6.9</date>
-		<div class="content">		
+		<div class="content">
 			更新日期：2015年8月7日<br />
 			1.全面升级各类教程内容对应Survivalcraft 1.27，删除和1.27版本无关的所有教程及工具<br />
 			2.SMT组规为适应2015年8月8日本导航完全公开而大量修改<br />
@@ -95,7 +105,7 @@
 	</div>
 	<div class="chapter">
 		<date>2.5.5.8</date>
-		<div class="content">		
+		<div class="content">
 			更新日期：2015年7月15日<br />
 			1.本版本作为Survivalcraft 1.26及以下版本对应mod教程最终版<br />
 			2.第四章章名改为其他教程<br />
@@ -107,7 +117,7 @@
 	</div>
 	<div class="chapter">
 		<date>2.5.5.7</date>
-		<div class="content">		
+		<div class="content">
 			更新日期：2015年2月26日<br />
             1.第四章章名改为工具教程，将原第三章部分内容转移至此，原第四章内容转移至资源下载整合<br />
             2.资源下载整合新增BeyoundComparPro下载，开启WP真正的U盘模式教程<br />
@@ -119,7 +129,7 @@
 	</div>
 	<div class="chapter">
 		<date>2.4.4.6</date>
-		<div class="content">		
+		<div class="content">
 			更新日期：2015年2月8日<br />
             1.SMT组规升级为正式版组规<br />
             2.SMT历史新增SMT情报部成立事件<br />
