--- a/resources.html
+++ b/resources.html
@@ -22,13 +22,13 @@
 <div id="menu">
 	<li class="parent"><span onclick="menuTo('cont_1')">一.游戏下载</span></li>
 	<div class="divide_line"></div>
-	
+
 	<li class="parent"><span onclick="menuTo('cont_2')">二.安卓资源</span></li>
 	<div class="divide_line"></div>
-	
+
 	<li class="parent"><span onclick="menuTo('cont_3')">三.IOS资源</span></li>
-	<div class="divide_line"></div>	
-		
+	<div class="divide_line"></div>
+
 	<li class="parent"><span onclick="menuTo('cont_4')">四.Windows资源</span></li>
 </div>
 
@@ -39,7 +39,7 @@
 
 <!--顶栏-->
 <div id="big_title_div" onclick="goTop()">资源下载整合</div>
-<div id="last_update">——更新日期 2015年8月1日——</div>
+<div id="last_update">——更新日期 2016年1月22日——</div>
 <div id="top_box"></div>
 <div id="top_box_top"></div>
 <div id="top_box_strutting"></div>
@@ -61,9 +61,10 @@
 			<a name="game_down" href="http://survivalcraft.cn/index.php/%E7%89%88%E6%9C%AC%E5%8E%86%E5%8F%B2#.E5.8E.86.E5.8F.B2.E7.89.88.E6.9C.AC.E4.B8.8B.E8.BD.BD" target="_blank">点击进入Survivalcraft中文Wiki提供的下载页面</a>
 		</div>
 	</div>
-	
+
 	<div class="chapter" id="cont_2">
 		<h1>第二节 安卓资源</h1>
+		<span style="font-size:10pt; display:block; font-weight:bold;">——以下大部分资源由酷市场提供，可以通过查看评论区很快地找到汉化版、破解版、去广告版</span>
 		<div class="section" id="cont_2.1">
 			<h2>1.文件管理</h2>
 			<div class="content">
@@ -77,9 +78,9 @@
 			<div class="content">
 				<a href="http://www.coolapk.com/apk/com.estrongs.android.pop" target="_blank">ES文件管理器</a><br />
 				臃肿但比较方便好用，能够创建FTP来与其他设备快速传输文件
-			</div>			
+			</div>
 		</div>
-		
+
 		<div class="section" id="cont_2.2">
 			<h2>2.文本编辑</h2>
 			<div class="content">
@@ -88,8 +89,11 @@
 			<div class="content">
 				<a name="a_jota_plus" href="http://www.coolapk.com/apk/jp.sblo.pandora.jota.plus" target="_blank">jota+</a>
 			</div>
+			<div class="content">
+				<a name="a_jota_plus" href="http://www.coolapk.com/apk/com.rhmsoft.edit" target="_blank">QuickEdit</a>
+			</div>
 		</div>
-		
+
 		<div class="section" id="cont_2.3">
 			<h2>3.图像处理</h2>
 			<div class="content">
@@ -109,7 +113,7 @@
 				photoshop touch 平板版
 			</div>
 		</div>
-		
+
 		<div class="section" id="cont_2.4">
 			<h2>4.音频编辑</h2>
 			<div class="content">
@@ -123,8 +127,15 @@
 				安卓核心破解后可无视安装包签名直接安装，需root，<a href="android_tutorial.html#cont_3">详情</a>
 			</div>
 		</div>
+		<div class="section" id="cont_2.6">
+			<h2>6.解包打包工具</h2>
+			<div class="content">
+				<a name="a_lucky_patcher" href="http://pan.baidu.com/share/link?shareid=1066340296&uk=2788149454" target="_blank">pak处理器</a><br />
+				感谢百度贴吧-瞄准地雷的开发和提供！（暂不能处理Content.pak中的图片为png格式）<br />
+			</div>
+		</div>
 	</div>
-	
+
 	<div class="chapter" id="cont_3">
 		<h1>第三节 IOS资源</h1>
 		<div class="section" id="cont_3.1">
@@ -136,30 +147,30 @@
 			<div class="content">
 				Filza<br />
 				类似ifile，某些功能可能更好用<br /><br />
-				注：以上两款文件管理器都需要越狱后在cydia下载安装，破解方法或破解版请自行百度（因为随着版本更新而发生改变）
+				注：以上两款文件管理器都需要越狱后在cydia下载安装，破解方法或破解版请自行百度（因为会随着版本更新而发生改变）
 			</div>
 		</div>
-		
+
 		<div class="section" id="cont_3.2">
 			<h2>2.文本编辑</h2>
 			<div class="content">
 				Textastic<br />
-				<a href="pphelperns://soft?b=com.textasticapp.textastic-iphone&i=1308312" target="_blank">iphone版</a> 
+				<a href="pphelperns://soft?b=com.textasticapp.textastic-iphone&i=1308312" target="_blank">iphone版</a>
 				<a href="pphelperns://soft?b=com.textasticapp.textastic&i=537094" target="_blank">ipad版</a><br />
 				请在有PP助手的IOS设备上用浏览器打开
 			</div>
 		</div>
-			
+
 		<div class="section" id="cont_3.3">
 			<h2>3.图像处理</h2>
 			<div class="content">
 				photoshop touch<br />
-				<a href="pphelperns://soft?b=com.adobe.pstouchphone&i=850145" target="_blank">iphone版</a> 
+				<a href="pphelperns://soft?b=com.adobe.pstouchphone&i=850145" target="_blank">iphone版</a>
 				<a href="pphelperns://soft?b=com.adobe.pstouch.ipad&i=504610" target="_blank">ipad版</a><br />
 				请在有PP助手的IOS设备上用浏览器打开
 			</div>
 		</div>
-			
+
 		<div class="section" id="cont_3.4">
 			<h2>4.音频处理</h2>
 			<div class="content">
@@ -167,7 +178,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="chapter" id="cont_4">
 		<h1>第四节 Windows资源</h1>
 		<div class="section" id="cont_4.1">
@@ -184,11 +195,11 @@
 			<h2>3.图像处理</h2>
 			<div class="content">
 				Photoshop cc<br />
-				<a href="http://www.xdowns.com/soft/31/93/2013/soft_107049.html" target="_blank">精简版</a>(32位) 
+				<a href="http://www.xdowns.com/soft/31/93/2013/soft_107049.html" target="_blank">精简版</a>(32位)
 				<a href="http://www.smzy.com/smzy/smzy100391.html" target="_blank">特别版</a>(64位)
 			</div>
 		</div>
-		
+
 		<div class="section" id="cont_4.4">
 			<h2>4.音频处理</h2>
 			<div class="content">
@@ -198,7 +209,7 @@
 				<a href="http://www.smzy.com/smzy/smzy104333.html" target="_blank">FL studio</a>
 			</div>
 		</div>
-		
+
 		<div class="section" id="cont_4.5">
 			<h2>5.DLL相关</h2>
 			<div class="content">
@@ -210,7 +221,7 @@
 				附<a href="http://zhu498833539.blog.163.com/blog/static/170712951201081163144448" target="_blank">VS2008破解方法</a>
 			</div>
 		</div>
-		
+
 		<div class="section" id="cont_4.6">
 			<h2>6.Android相关</h2>
 			<div class="content">
@@ -233,7 +244,7 @@
 				基于Bluestacks的一款多功能Android模拟器
 			</div>
 		</div>
-		
+
 		<div class="section" id="cont_4.7">
 			<h2>7.IOS相关</h2>
 			<div class="content">
@@ -281,7 +292,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="chapter" id="cont_5">
 		<h1>第五节 其他资源</h1>
 			<div class="content">
