--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -22,13 +22,13 @@
 <div id="menu">
 	<li class="parent"><span onclick="menuTo('cont_1')">一.数据类型</span></li>
 	<div class="divide_line"></div>
-	
+
 	<li class="parent"><span onclick="menuTo('cont_2')">二.内容详解</span></li>
 	<div class="divide_line"></div>
-	
+
 	<li class="parent"><span onclick="menuTo('cont_3')">三.启发例子</span></li>
 	<div class="divide_line"></div>
-	
+
 	<li class="parent"><span onclick="menuTo('cont_appendix')">附录</span></li>
 </div>
 
@@ -39,7 +39,7 @@
 
 <!--顶栏-->
 <div id="big_title_div" onclick="goTop()">Blocksdata教程</div>
-<div id="last_update">——更新日期 2015年9月18日——</div>
+<div id="last_update">——更新日期 2016年1月22日——</div>
 <div id="top_box"></div>
 <div id="top_box_top"></div>
 <div id="top_box_strutting"></div>
@@ -48,21 +48,23 @@
 <div id="upper_box">
 	<h1>前言</h1>
 	<div class="content">
-		内容详解原表大致框架及翻译由百度贴吧-大王派提供，1.22.7及以后更新内容和其他更多解释说明由百度贴吧-销锋镝铸编写。
+		内容详解原表大致框架及翻译由百度贴吧-大王派提供，游戏1.22.7及以后更新内容和其他更多解释说明由百度贴吧-销锋镝铸编写。<br />
+		目前本页内容对应游戏1.29。
 		<script>if(isMobile == true){document.write("<br />提示：手机端建议横屏查看");}</script>
 	</div>
 </div>
 
 <!--内容栏-->
-<div id="content_box"> 
+<div id="content_box">
 	<div class="chapter" id="cont_1">
 		<h1>第一节 数据类型</h1>
+		<span style="font-size:10pt; display:block; font-weight:bold;">——每个属性能够支持的数据类型</span>
 		<div class="content">
 			<table>
 				<tr style="font-weight:bold; text-align:center">
 					<td>英文名</td>
 					<td>中文名</td>
-					<td>内容</td>
+					<td>数值范围</td>
 				</tr>
 				<tr>
 					<td>Boolean</td>
@@ -130,8 +132,8 @@
 				<tr>
 					<td>2</td>
 					<td>String</td>
-					<td>Category</td>
-					<td>类别</td>
+					<td>Default Category</td>
+					<td>默认类别</td>
 					<td>帮助中的类别</td>
 				</tr>
 				<tr>
@@ -166,465 +168,486 @@
 					<td>7</td>
 					<td>uint</td>
 					<td>Default Icon View Scale</td>
-					<td>默认图标视角大小</td>
+					<td>默认图标视角大小缩放</td>
 					<td>在物品栏里显示的大小</td>
 				</tr>
 				<tr>
 					<td>8</td>
 					<td>uint</td>
-					<td>In Hand Scale</td>
-					<td>在手里的大小</td>
-					<td>第三人称有效果</td>
+					<td>First Person Scale</td>
+					<td>第一人称大小缩放</td>
+					<td>第一人称视角下手持物品的大小缩放倍数</td>
 				</tr>
 				<tr>
 					<td>9</td>
-					<td>Array(2)</td>
-					<td>In Hand Offset</td>
-					<td>在手里的图片偏移</td>
-					<td> </td>
+					<td>uint</td>
+					<td>First Person Offset</td>
+					<td>第一人称位置偏移</td>
+					<td>第一人称视角下手持物品的位置偏移</td>
 				</tr>
 				<tr>
-					<td nowrap>10</td>
+					<td>10</td>
 					<td>uint</td>
-					<td>In Hand Rotation</td>
-					<td>在手里时旋转角度</td>
-					<td>角度制 0~360度</td>
+					<td>First Person Rotation</td>
+					<td>第一人称物品旋转</td>
+					<td>第一人称视角下手持物品的旋转角度</td>
 				</tr>
 				<tr>
 					<td>11</td>
+					<td>uint</td>
+					<td>In Hand Scale</td>
+					<td>在手里的大小缩放</td>
+					<td>第三人称视角下手持物品的大小缩放倍数</td>
+				</tr>
+				<tr>
+					<td>12</td>
+					<td>Array(2)</td>
+					<td>In Hand Offset</td>
+					<td>在手里的位置偏移</td>
+					<td>第三人称视角下手持物品的位置偏移</td>
+				</tr>
+				<tr>
+					<td nowrap>13</td>
+					<td>uint</td>
+					<td>In Hand Rotation</td>
+					<td>在手里时旋转角度</td>
+					<td>第三人称视角下手持物品的旋转角度</td>
+				</tr>
+				<tr>
+					<td>14</td>
 					<td>String</td>
 					<td>CraftingId</td>
 					<td>合成标识</td>
 					<td>在CraftingRecipes.xml中作为合成材料时方块标识</td>
 				</tr>
 				<tr>
-					<td>12</td>
+					<td>15</td>
 					<td>int</td>
 					<td>Default Creative Data</td>
 					<td>默认创造模式是否提供</td>
 					<td>-1不提供，0创造模式免费提供</td>
 				</tr>
 				<tr>
-					<td>13</td>
+					<td>16</td>
 					<td>Boolean</td>
 					<td>Is Collidable</td>
 					<td>是否可碰撞</td>
 					<td>当此项为FALSE时，主角和动物可以穿过它(例如草和花)；TRUE时则不可穿过（例如石头和土）</td>
 				</tr>
 				<tr>
-					<td>14</td>
+					<td>17</td>
 					<td>Boolean</td>
 					<td>Is Placeable</td>
 					<td>是否可放置</td>
 					<td>工具武器什么的改成TRUE便可以放置到地上，但不可见</td>
 				</tr>
 				<tr>
-					<td>15</td>
+					<td>18</td>
 					<td>Boolean</td>
 					<td>Is Digging Transparent</td>
 					<td>挖掘时是否透明</td>
 					<td>是否可挖掘</td>
 				</tr>
 				<tr>
-					<td>16</td>
+					<td>19</td>
 					<td>Boolean</td>
 					<td>Is Placement Transparent</td>
 					<td>是否放置透明</td>
 					<td>是否可以在它上面放东西，如果是TRUE就会点到后面的方块来放置</td>
 				</tr>
 				<tr>
-					<td>17</td>
+					<td>20</td>
 					<td>Boolean</td>
 					<td>Is Interactive</td>
 					<td>是否交互</td>
 					<td>电器此项为TRUE，但改了没任何效果</td>
 				</tr>
 				<tr>
-					<td>18</td>
+					<td>21</td>
 					<td>Boolean</td>
 					<td>Is Editable</td>
 					<td>是否可编辑</td>
 					<td>内存条，真值表此值为TRUE</td>
 				</tr>
 				<tr>
-					<td>19</td>
+					<td>22</td>
 					<td>Boolean</td>
 					<td>Is Gatherable</td>
 					<td>是否可收集</td>
 					<td>即可不可以捡起来</td>
 				</tr>
 				<tr>
-					<td>20</td>
+					<td>23</td>
 					<td>Boolean</td>
 					<td>Has Collision Behavior</td>
 					<td>是否有碰撞动作</td>
 					<td>压力板此属性为true，改其他物品貌似无效果</td>
 				</tr>
 				<tr>
-					<td>21</td>
+					<td>24</td>
 					<td>Boolean</td>
 					<td>Kills When Stuck</td>
 					<td>卡住时杀死卡在其中的实体</td>
 					<td>仙人掌和倒刺板此值为TRUE</td>
 				</tr>
 				<tr>
-					<td>22</td>
+					<td>25</td>
 					<td>Boolean</td>
 					<td>Is Fluid Blocker</td>
 					<td>能否阻挡流体</td>
 					<td>流体指水和岩浆，空气此属性为TRUE时它们就不会乱流了</td>
 				</tr>
 				<tr>
-					<td>23</td>
+					<td>26</td>
 					<td>Boolean</td>
 					<td>Is Transparent</td>
 					<td>是否透明</td>
 					<td>即是否实体，是就代表材质透明时黑的，否就代表透明材质时透明。同时决定是否被沙子压碎。还和方块刷新位置有关，如果玄武岩上方会长生的方块此属性为”TRUE”时就会刷新到地面（直接在草地上）</td>
 				</tr>
 				<tr>
-					<td>24</td>
+					<td>27</td>
 					<td>uint</td>
 					<td>Shadow Strength</td>
 					<td>阴影强度（-1~15）</td>
 					<td>-1就是实体方块，方块透明的同时还必须把它改成大于等于0</td>
 				</tr>
 				<tr>
-					<td>25</td>
+					<td>28</td>
 					<td>uint</td>
 					<td>Light Attenuation</td>
 					<td>光衰减</td>
-					<td>仅透明方块有效，光透过方块时衰减的衰减，越小越透明</td>
+					<td>仅透明方块有效，光透过方块时衰减的亮度，越小越透光</td>
 				</tr>
 				<tr>
-					<td>26</td>
+					<td>29</td>
 					<td>uint</td>
 					<td>Emitted Light Amount</td>
 					<td>发光强度</td>
 					<td>9时照亮一格，15时照亮7格，以上虽然照亮更大范围，但会出bug，最大23</td>
 				</tr>
 				<tr>
-					<td>27</td>
+					<td>30</td>
 					<td>uint</td>
 					<td>Object Shadow Strength</td>
 					<td>物体阴影强度</td>
 					<td> </td>
 				</tr>
 				<tr>
-					<td>28</td>
+					<td>31</td>
 					<td>String</td>
 					<td>Default Drop Content</td>
 					<td>默认掉落物品</td>
 					<td>写#号开头的要掉落的物品的标识符。花，稻子没法改，若掉落自己本身，直接写个#就行</td>
 				</tr>
 				<tr>
-					<td>29</td>
+					<td>32</td>
 					<td>uint</td>
 					<td>Default Drop Count</td>
 					<td>默认掉落数量</td>
 					<td> </td>
 				</tr>
 				<tr>
-					<td>30</td>
+					<td>33</td>
 					<td>uint</td>
 					<td>Required Tool Level</td>
 					<td>需求工具等级</td>
 					<td>挖掘时需求的装备等级，钻石矿为4</td>
 				</tr>
 				<tr>
-					<td>31</td>
+					<td>34</td>
 					<td>uint</td>
 					<td>Max Stacking</td>
 					<td>最大背包</td>
 					<td>箱子,工作台和火炉里可以堆叠的数量</td>
 				</tr>
 				<tr>
-					<td>32</td>
+					<td>35</td>
 					<td>uint</td>
 					<td>Max In Hand Stacking</td>
 					<td>最大手持</td>
 					<td>下面6个方框堆叠数量</td>
 				</tr>
 				<tr>
-					<td>33</td>
+					<td>36</td>
 					<td>Boolean</td>
 					<td>Sleep Suitability</td>
 					<td>适合睡觉</td>
 					<td>0.5好像是最适合，0代表不能睡</td>
 				</tr>
 				<tr>
-					<td>34</td>
+					<td>37</td>
 					<td>double</td>
 					<td>Friction Factor</td>
 					<td>（行走）摩擦系数</td>
 					<td>越小越滑，为0时无法走动</td>
 				</tr>
 				<tr>
-					<td>35</td>
+					<td>38</td>
 					<td>double</td>
 					<td>Density</td>
 					<td>密度</td>
 					<td>物品掉落水中浮沉的指标</td>
 				</tr>
 				<tr>
-					<td>36</td>
+					<td>39</td>
 					<td>Boolean</td>
 					<td>No Auto Jump</td>
 					<td>走上方块不执行自动跳跃</td>
 					<td>此值为TRUE时面前遇到一格高此方块将自动停住或绕道</td>
 				</tr>
 				<tr>
-					<td>37</td>
+					<td>40</td>
 					<td>Boolean</td>
 					<td>No Smooth Rise</td>
 					<td>进入其中不执行流畅上升</td>
 					<td>其中栅栏此属性为TRUE所以动物不会跳过去</td>
 				</tr>
 				<tr>
-					<td>38</td>
+					<td>41</td>
 					<td>uint</td>
 					<td>Fuel Heat Level</td>
 					<td>燃料等级</td>
 					<td>只有煤的此属性是2, 烧铁块需求的等级是2</td>
 				</tr>
 				<tr>
-					<td>39</td>
+					<td>42</td>
 					<td>uint</td>
 					<td>Fuel Fire Duration</td>
 					<td>燃料燃烧持续时间</td>
 					<td>相当于热值,越大烧的时间越长，产出越多</td>
 				</tr>
 				<tr>
-					<td>40</td>
+					<td>43</td>
 					<td>String</td>
 					<td>Sound Material Name</td>
 					<td>声音材料名称</td>
 					<td>对应到Content/Audio里的文件</td>
 				</tr>
 				<tr>
-					<td>41</td>
+					<td>44</td>
 					<td>String</td>
 					<td>Digging Sounds Folder</td>
 					<td>挖掘声音文件夹</td>
 					<td>被挖掘时发出的声音所在的位置</td>
 				</tr>
 				<tr>
-					<td>42</td>
+					<td>45</td>
 					<td>double</td>
 					<td>Digging Sounds Volume</td>
 					<td>挖掘声音音量</td>
 					<td> </td>
 				</tr>
 				<tr>
-					<td>43</td>
+					<td>46</td>
 					<td>double</td>
 					<td>Destruction Sounds Volume</td>
 					<td>破坏声音音量</td>
 					<td> </td>
 				</tr>
 				<tr>
-					<td>44</td>
+					<td>47</td>
 					<td>double</td>
 					<td>Shovel Power</td>
 					<td>铲子效率</td>
 					<td rowspan=3>各种工具（ShovelPower等）是挖掘速度（每秒）（不含反应/识别时间）例如Quarry Power是20的工具挖Dig Resilience是60的方块要3秒空手的速度目前测得全部为1</td>
 				</tr>
 				<tr>
-					<td>45</td>
+					<td>48</td>
 					<td>double</td>
 					<td>Quarry Power</td>
 					<td>镐子效率</td>
 				</tr>
 				<tr>
-					<td>46</td>
+					<td>49</td>
 					<td>double</td>
 					<td>Hack Power</td>
 					<td>斧头效率</td>
 				</tr>
 				<tr>
-					<td>47</td>
+					<td>50</td>
 					<td>double</td>
 					<td>Default Melee Power</td>
 					<td>打击(近战)攻击力</td>
 					<td> </td>
 				</tr>
 				<tr>
-					<td>48</td>
+					<td>51</td>
+					<td>double</td>
+					<td>Default Melee Hit Probability</td>
+					<td>默认近战击中概率</td>
+					<td>在1.27某些版本中，它处于DefaultMeleePower与DefaultProjectilePower之间，现已消失</td>
+				</tr>
+				<tr>
+					<td>52</td>
 					<td>double</td>
 					<td>Default Projectile Power</td>
 					<td>投掷攻击力</td>
 					<td>丢出去的物品的攻击力</td>
 				</tr>
 				<tr>
-					<td>49</td>
+					<td>53</td>
 					<td>uint</td>
 					<td>Tool Level</td>
 					<td>工具等级</td>
 					<td>木头工具该属性为1，石头为2，铁为3，钻石为4</td>
 				</tr>
 				<tr>
-					<td>50</td>
+					<td>54</td>
 					<td>uint</td>
-					<td>Tool Durability</td>
+					<td>Durability</td>
 					<td>工具耐久度</td>
 					<td>即使用次数，建议不要超过七万</td>
 				</tr>
 				<tr>
-					<td>51</td>
+					<td>55</td>
 					<td>Boolean</td>
 					<td>Is Aimable</td>
 					<td>是否可瞄准</td>
 					<td>可投掷物品及弓此属性都为TRUE</td>
 				</tr>
 				<tr>
-					<td>52</td>
+					<td>56</td>
 					<td>Boolean</td>
 					<td>Is Stickable</td>
 					<td>击中方块是否停留</td>
 					<td>比如矛的为TRUE，煤，铁锭为FALSE。若该方块有BombBlockBehavior则按一定概率穿过Projectile Stick Probability大于0的方块</td>
 				</tr>
 				<tr>
-					<td>53</td>
+					<td>57</td>
 					<td>Boolean</td>
 					<td>Align To Velocity</td>
 					<td>成直线速率</td>
 					<td>此值为TRUE时该物品被抛出看起来是横向的(例如矛)，不建议给无3D模型的物品调成TRUE（实在不知如何翻译）</td>
 				</tr>
 				<tr>
-					<td>54</td>
+					<td>58</td>
 					<td>double</td>
 					<td>Projectile Speed</td>
 					<td>投掷速度</td>
 					<td>亲测就是最大投掷距离</td>
 				</tr>
 				<tr>
-					<td>55</td>
+					<td>59</td>
 					<td>double</td>
 					<td>Projectile Damping</td>
 					<td>投掷阻力(衰减)</td>
 					<td>改为零出现超时空现象</td>
 				</tr>
 				<tr>
-					<td>56</td>
+					<td>60</td>
 					<td>Array(3)</td>
 					<td>Projectile Tip Offset</td>
 					<td>扔出点偏移</td>
 					<td> </td>
 				</tr>
 				<tr>
-					<td>57</td>
+					<td>61</td>
 					<td>Boolean</td>
 					<td>Disintegrates On Hit</td>
 					<td>撞击时碎裂</td>
 					<td>蛋的此属性为TRUE</td>
 				</tr>
 				<tr>
-					<td>58</td>
+					<td>62</td>
 					<td>double</td>
 					<td>Projectile Stick Probability</td>
 					<td>物品粘性可能性</td>
 					<td>使IsStickable为TRUE的方块被投掷到它上面粘住的可能性(若那个物品有BombBlockBehavior属性则为穿过可能性)</td>
 				</tr>
 				<tr>
-					<td>59</td>
+					<td>63</td>
 					<td>double</td>
 					<td>Fire Duration</td>
 					<td>露天点火持续时间</td>
 					<td>这个值改成小数会向下取整</td>
 				</tr>
 				<tr>
-					<td>60</td>
+					<td>64</td>
 					<td>double</td>
 					<td>Explosion Resilience</td>
 					<td>爆炸抗性</td>
 					<td>爆炸血量，越大越耐炸，可以为无限</td>
 				</tr>
 				<tr>
-					<td>61</td>
+					<td>65</td>
 					<td>double</td>
 					<td>Default Explosion Pressure</td>
 					<td>默认爆炸压力</td>
 					<td>此值影响爆炸范围和威力。对范围的影响是要多少倍范围乘1后面多少个0，例如2倍范围数值需要乘100。威力和此值成正比，为每秒的伤害</td>
 				</tr>
 				<tr>
-					<td>62</td>
+					<td>66</td>
 					<td>uint</td>
 					<td>IsExplosionTransparent</td>
 					<td>是否爆炸透明</td>
 					<td>此值为TRUE时该物品可被炸飞</td>
 				</tr>
 				<tr>
-					<td>63</td>
+					<td>67</td>
 					<td>String</td>
 					<td>Dig Method</td>
 					<td>挖掘方法</td>
 					<td>取消挖掘透明这里至少要选一种工具</td>
 				</tr>
 				<tr>
-					<td>64</td>
+					<td>68</td>
 					<td>double</td>
 					<td>Dig Resilience</td>
 					<td>挖掘抗性</td>
 					<td>越大要挖得越久，基岩这个属性是无限</td>
 				</tr>
 				<tr>
-					<td>65</td>
+					<td>69</td>
 					<td>double</td>
 					<td>Projectile Resilience</td>
 					<td>弹射物抗性</td>
 					<td>越大越不容易被矛等投掷出的物品砸破</td>
 				</tr>
 				<tr>
-					<td>66</td>
+					<td>70</td>
 					<td>double</td>
 					<td>Nutritional Value</td>
 					<td>营养价值</td>
 					<td>大于0时可以食用，范围0-1，食用增加等量饱食度</td>
 				</tr>
 				<tr>
-					<td>67</td>
+					<td>71</td>
 					<td>uint</td>
 					<td>Food Type</td>
 					<td>食物类型</td>
 					<td>可自定义，Database.xml中规定了每种动物对不同食物类型的喜好程度，原版有Fruit、Grass、Meat、Fish</td>
 				</tr>
 				<tr>
-					<td>68</td>
+					<td>72</td>
 					<td>uint</td>
 					<td>Default Texture Slot</td>
 					<td>默认材质位置</td>
-					<td>材质图上从左向右，从上向下排列顺序，第一个（草地上面）是0，第二个（花岗岩）是1</td>
+					<td>材质图上从左向右，从上向下排列顺序，第一个（草地顶面）是0，第二个（花岗岩）是1</td>
 				</tr>
 				<tr>
-					<td>69</td>
+					<td>73</td>
 					<td>double</td>
 					<td>Destruction Debris Scale</td>
-					<td>破坏碎片缩放比例</td>
-					<td>就破坏时爆出的一堆碎片一样的东西的大小</td>
+					<td>破坏碎片大小缩放</td>
+					<td>方块被破坏时爆出的一堆碎片一样的东西的大小缩放倍数</td>
 				</tr>
 				<tr>
-					<td>70</td>
+					<td>74</td>
 					<td>String</td>
 					<td>Default Description</td>
 					<td>默认描述</td>
 					<td>会在游戏帮助的方块说明界面出现，可以随意删除添加内容</td>
 				</tr>
-				<tr>
-					<td>隐藏</td>
-					<td>double</td>
-					<td>Default Melee Hit Probability</td>
-					<td>默认近战击中概率</td>
-					<td>在1.27某些版本中，它处于DefaultMeleePower与DefaultProjectilePower之间，现已消失</td>
-				</tr>
 			</table>
 		</div>
 	</div>
-	
+
 	<div class="chapter" id="cont_3">
 		<h1>第三节 启发例子</h1>
 		<div class="content">
 				(提示：善于使用查找替换功能以及<a href="regex_tutorial.html">正则表达式</a>，方便批量修改。)
 		</div>
-		
+
 		<div class="section">
 			<h2>1.物体发光</h2>
 			<div class="content">
@@ -632,73 +655,67 @@
 				修改要修改的方块的Emitted Light Amount为9~22,Light Attenuation为大于0（一般改为1）
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>2.狙击矛</h2>
 			<div class="content">
-				修改要修改的可投掷方块的Projectile Speed为较大值(9999最省字节)，Projectile Damping为0(会导致超时空现象，即瞬间击中目标并弹回到主角面前，也可不改)
+				修改要修改的可投掷方块的Projectile Speed为较大值(例如9999)，Projectile Damping为0(会导致超时空现象，即瞬间击中目标并弹回到主角面前，也可不改)
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>3.铁砂掌</h2>
 			<div class="content">
 				(生存模式像创造模式一样破坏物品)<br />
 				修改所有方块的Dig Resilience为0
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>4.超级工具</h2>
 			<div class="content">
 			    即秒砍挖铲杀，耐久几乎无限。<br />
-				修改要修改的工具方块的ShovelPower，QuarryPower，HackPower为99，DefaultMeleePower或DefaultProjectilePower为999(虎鲸攻击抗性大于100)，ToolLevel为4，ToolDurability为50000(没人用的完，比无限省3个字节，且太大容易出错)
+				修改要修改的工具方块的ShovelPower，QuarryPower，HackPower为99，DefaultMeleePower或DefaultProjectilePower为999(虎鲸攻击抗性为200)，ToolLevel为4，ToolDurability为50000(没人用的完，比无限省3个字节，且太大容易出错)
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>5.超级大炮</h2>
 			<div class="content">
 				修改任意火药桶方块的Default Explosion Pressure为99999，作镗的方块的Explosion Resilience为Infinity
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>6.会掉落物品的水，岩浆，火</h2>
 			<div class="content">
-				修改WaterBlock、MagmaBlock、FireBlock的Digging Transparent为FALSE，Default Drop Content为你想要让它掉落的方块，Dig Method若原来没有，改为一种工具英文名，例如Shovel
+				修改WaterBlock、MagmaBlock、FireBlock的Digging Transparent为FALSE，Default Drop Content为你想要让它掉落的方块，Dig Method若原来为空，则需要改为一种工具类别，包括Shovel、Quarry、Hack
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>7.基岩综合</h2>
 			<div class="content">
-			    即基岩可挖掘，拾取，创造模式提供<br />
+			    （基岩可挖掘，拾取，创造模式提供）<br />
 				修改BedrockBlock的Is Placeable、Is Gatherable为TRUE，Default Creative Data、Dig Resilience为0
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>8.水透视</h2>
 			<div class="content">
 				(通过水看地下岩浆分布，也会带来副作用，大海表面被草原覆盖)<br />
 				修改WaterBlock的Is Transparent为FALSE，Light Attenuation为0，Emitted Light Amount为适当值使方块发光
 			</div>
 		</div>
-		<div class="section">	
+		<div class="section">
 			<h2>9.超级挖沙挖落岩</h2>
 			<div class="content">
 				(挖一块连着它的方块全部破坏)<br />
-				修改SandBlock和GraveBlock的Is Transparent为TRUE，Shadow Strength为大于等于0的数。(渣机准备受死)
+				修改SandBlock和GraveBlock的Is Transparent为TRUE，Shadow Strength为大于等于0的数。
 			</div>
 		</div>
-		<div class="section">	
-			<h2>10.第三人称视角巨型物品</h2>
+		<div class="section">
+			<h2>10.快速除水</h2>
 			<div class="content">
-				修改要修改的方块的In Hand Scale为任意比原来大的值即可
-			</div>
-		</div>
-		<div class="section">	
-			<h2>11.快速除水</h2>
-			<div class="content">
-				引爆大炸弹将一定范围内流体（水和岩浆）全部炸掉，同时大炸弹可以直接放置于水中并在水中爆炸，而其他方块不受影响；空气能阻止流体继续流动<br />
+				（引爆大炸弹将一定范围内流体（水和岩浆）全部炸掉，同时大炸弹可以直接放置于水中并在水中爆炸，而其他方块不受影响；空气能阻止流体继续流动）<br />
 				修改WaterBlock和MagmaBlock的ExplosionResilience为0，IsExplosionTransparent为True，修改WaterBlock的IsPlacementTransparent为False，修改LargeGunpowderKegBlock的IsFluidBlocker为True，DefaultExplosionPressure为99999，修改除WaterBlock和MagmaBlock外所有方块的ExplosionResilience为Infinity
 			</div>
 		</div>
-		
+
 	</div>
 
 	<div class="chapter" id="cont_appendix">
@@ -779,7 +796,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="chapter">
 		<h1>附件</h1>
 		<div class="content">
