--- a/index.html
+++ b/index.html
@@ -1,25 +1,110 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
-<!--更新日期 2015年9月12日-->
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no"/>
-    <title>SMT导航</title>
-    <script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
+	<title>SMT导航</title>
+	<style>
+		#error li {
+			font-size: 22px;
+			margin: 10px 15px;
+		}
+	</style>
+	<script src="js/jquery.min.js"></script>
+	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
+	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
+	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
+	<script>document.write("<script src='js/preload.js?" + ver + "'><" + "/script>");</script>
+	<script>
+		if (isOnline == false && navigator.onLine){
+			document.write("<script src='http://survivalcraft.cn/smt/js/online_version.js?" + Math.random() +  "'><"+"/script>");
+		}
+	</script>
 </head>
 
 <body>
-你的浏览器无法正常访问该网页，请换用其他浏览器访问！<br/>（安卓设备建议使用UC浏览器、QQ浏览器；IOS设备建议使用Filza、ifile；Windows设备建议使用Chrome、360安全浏览器、搜狗浏览器）
-<!--判断js是否已正常载入-->
-<script>if (typeof ver == "undefined") {
-    alert("你的浏览器无法正常访问该网页，请换用其他浏览器访问！" + "\n" + "（安卓设备建议使用UC浏览器、QQ浏览器；IOS设备建议使用Filza、ifile；Windows设备建议使用Chrome、360安全浏览器、搜狗浏览器）");
-    window.opener = null;
-    window.open('', '_self');
-    window.close();
-    window.stop();
-} else {
-    window.location.href = 'true_index.html'
-}</script>
+<div id="error" style="width:100%; height: 100%; z-index: 999; text-align:center;">
+	<div style="display:inline-block; text-align:left; padding: 20% 0;">
+		<span style="color:#6cf; font-weight:bold; font-size:42px;">网页无法正常显示，请尝试：</span>
+		<ul style="margin-top:30px;">
+			<li>IE用户请点击下方<span style="color:#F60;">“允许阻止的内容”</span>按钮</li>
+			<li>更换其他浏览器</li>
+		</ul>
+	</div>
+</div>
 
+<div id="cont_wrapper">
+	<script>
+		// JS正常加载时隐藏error、显示cont_wrapper
+		$("#error").css("display", "none");
+		$("#cont_wrapper").css("display", "block");
+	</script>
+	<!--顶栏 按钮-->
+	<div id="buttons">
+		<img id="nav_btn" src="image/nav_btn.png" onclick="navDisp()" />
+	</div>
+
+	<!--导航-->
+	<div id="nav" class="nav"></div>
+	<div id="nav_overlay"></div>
+
+	<!--顶栏-->
+	<div id="big_title_div" onclick="goTop()">SMT导航</div>
+	<div id="top_box"></div>
+	<div id="top_box_top"></div>
+	<div id="top_box_strutting"></div>
+
+	<!--内容栏-->
+	<div id="content_box">
+		<div class="chapter">
+			<div class="content">
+				<img title="SMT logo 2014.9.10" style="display:block; margin:0 auto; width:300px; max-width:80%;" src="image/logo_1.png" />
+			</div>
+			<div class="content">
+				SMT全名Survivalcraft Mods & Textures，简称SMT或SMT组，为生存战争吧官方组织之一
+			</div>
+			<div class="content">
+				宗旨：深入研究Survivalcraft，使游戏更加有趣，多样化
+			</div>
+			<div class="content">
+				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组<br />
+			</div>
+		</div>
+
+		<script>
+			if(isOnline == false && navigator.onLine && ver != online_ver){
+				document.write("<div class='chapter'><h1>更新导航</h1><div class='content'>在线最新版：" + online_ver +"<br />请更新离线导航 <a href='http://survivalcraft.cn/smt/nav_update.html' target='_blank'>点击更新</a></div></div>")
+			}
+		</script>
+
+		<div class="chapter">
+			<h1>版本号</h1>
+			<div class="content" id="current_version">
+				<!--缓存校验-->
+				<span style="color:#F00; font-weight:bold;">当看到这段话，请清除缓存并刷新页面！</span><br />
+				当前版本：<script>document.write(ver)</script><br />
+				缓存版本：<script>document.write(version)</script><br />
+				为保证正常浏览，请清除浏览器缓存
+				<script>if (ver == version) $("#current_version").html(version);</script>
+			</div>
+			<div class="content">
+			本版本更新日期 2015年9月18日<br />
+			本版本mod教程对应Survivalcraft 1.27
+			</div>
+		</div>
+
+		<div class="chapter">
+			<h1>使用提示</h1>
+			<div class="content">
+			左上角菜单键——导航目录（建议从上向下依次阅读）<br />
+			右上角菜单键——小节目录（内容过少时不显示）<br />
+			标题栏标题——返回顶部
+			</div>
+		</div>
+		<h1 style="text-align: center; margin-bottom:25px">转载请注明出处！</h1>
+	</div>
+</div>
+
+<script>document.write("<script src='js/delayload.js?" + ver + "'><" + "/script>");</script>
 </body>
 </html>
